add remotedev server scripts

--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,8 @@
 </body>
 <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
 <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
-<script src="https://unpkg.com/remotedev-app@0.10.7/dist/remotedev-app.min.js"></script>
+<!--<script src="https://unpkg.com/remotedev-app@0.10.7/dist/remotedev-app.min.js"></script>-->
+<script src="https://unpkg.com/remotedev-app@0.11.0-0/dist/remotedev-app.min.js"></script>
 <script>
     let root = document.getElementById('root');
     ReactDOM.render(
