--- a/src/template.html
+++ b/src/template.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>Remote Devtools</title>
-    <style>
-        html,
-        body,
-        #root {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
-</head>
-
-<body>
-    <div id="root"></div>
-</body>
-<script src="https://unpkg.com/react@15/dist/react.min.js"></script>
-<script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
-<!--<script src="https://unpkg.com/remotedev-app@0.10.7/dist/remotedev-app.min.js"></script>-->
-<script src="https://unpkg.com/remotedev-app@0.11.0-0/dist/remotedev-app.min.js"></script>
-<script>
-    let root = document.getElementById('root');
-    ReactDOM.render(
-        React.createElement(
-            RemoteDevApp, {
+    <head>
+        <title>Remote Devtools</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="renderer" content="webkit">
+        <style>
+            html, body, #root {
+                width: 100%;
+                height: 100%;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
+    <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
+    <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+    <script src="https://unpkg.com/remotedev-app@0.11.0-2/dist/remotedev-app.min.js"></script>
+    <script>
+        let root = document.getElementById('root');
+        ReactDOM.render(
+            React.createElement(
+                RemoteDevApp,
+                {
                 socketOptions: {
                     hostname: 'localhost',
-                    port: 1024,
+                    port: '8000',
                     autoReconnect: true
                 }
-            },
-            'Remote Devtools'
-        ),
-        root
-    );
-</script>
-
+                },
+                'Remote Devtools'
+            ),
+            root
+        );
+    </script>
 </html>
