--- a/src/template.html
+++ b/src/template.html
@@ -16,10 +16,11 @@
   <body>
     <div id="root"></div>
   </body>
-  <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
-  <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
-  <script src="https://unpkg.com/remotedev-app@0.11.0-2/dist/remotedev-app.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react@15/dist/react.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-dom@15/dist/react-dom.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/remotedev-app@0.11.0-2/dist/remotedev-app.min.js"></script>
   <script>
+    console.log(React['default'])
     const root = document.getElementById('root')
     ReactDOM.render(
       React.createElement(
